Password generator (insicurissimo!)

--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Javascript</title>
   </head>
   <body>
+
+    <h1>Usa Javascript per generare un (insicurissimo) password generator</h1>
+
+    <h2 id="compila"> Nome Cognome Colore preferito Numero</h2>
+
+
+
 
 
 
